package game.gameLogic.cells;

import game.gameLogic.characters.Player;

public class CommonCell extends Cell {


    public CommonCell(){
        super();
    }

    @Override
    public void collectItem(Player player) {
        return;
    }

}
