@startuml

title __CELLS's Class Diagram__\n


        abstract class gameLogic.cells.Cell {
            - sides : HashSet<CellSide>
            {abstract} + collectItem()
            + deleteWall()
            + hasItem()
            + hasWall()
            ~ Cell()
        }



        enum CellSide {
          BOTTOM
          LEFT
          NAW
          RIGHT
          UP
        }



        class gameLogic.cells.CellWithCoin {
            - coin : boolean
            + CellWithCoin()
            + collectItem()
            + hasItem()
        }

  

        class gameLogic.cells.CommonCell {
            + CommonCell()
            + collectItem()
        }

  

        class gameLogic.cells.EndCell {
            + EndCell()
            + collectItem()
        }


  gameLogic.cells.CellWithCoin -up-|> gameLogic.cells.Cell
  gameLogic.cells.CommonCell -up-|> gameLogic.cells.Cell
  gameLogic.cells.EndCell -up-|> gameLogic.cells.Cell


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
